--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Test</title>
+    <title>Subway</title>
     <link rel="stylesheet" type="text/css" href="./src/style.css" />
 </head>
 
